Added cookies and refresh token
