# Backend/Modules/UserManagement/Modules.UserManagement.App/Commands/Register/RegisterCommandHandler.cs
@@ -1,30 +1,20 @@
 ﻿using MediatR;
-using Modules.UserManagement.Domain.Aggregates;
-using Modules.UserManagement.Infrastructure.DataAccessLayer.Repositories;
+using Modules.UserManagement.Domain.Aggregates.Account;
+using Modules.UserManagement.Infrastructure.DataAccessLayer.UoT;
 using Modules.UserManagement.IntegrationEvents.Events;
 using SharedUtils.Events;
 using UserAuth.App.Services.Password;
 
 namespace Modules.UserManagement.App.Commands.Register;
-public sealed class RegisterCommandHandler : IRequestHandler<RegisterCommand, Unit>
+public sealed class RegisterCommandHandler(
+    IUnitOfWork _uot,
+    IPasswordService _passwordService,
+    IEventsQueueService _eventsQueue)
+    : IRequestHandler<RegisterCommand, Unit>
 {
-    private readonly IAccountRepository _accountRepo;
-    private readonly IPasswordService _passwordService;
-    private readonly IEventsQueueService _eventsQueue;
-
-    public RegisterCommandHandler(
-        IAccountRepository accountRepo,
-        IPasswordService passwordService,
-        IEventsQueueService eventsQueue)
-    {
-        _accountRepo = accountRepo;
-        _passwordService = passwordService;
-        _eventsQueue = eventsQueue;
-    }
-
     public async Task<Unit> Handle(RegisterCommand request, CancellationToken cancellationToken)
     {
-        await _accountRepo.AddAsync(
+        await _uot.Accounts.AddAsync(
             new Account(
                 request.Username,
                 request.Email,
@@ -32,6 +22,8 @@ public sealed class RegisterCommandHandler : IRequestHandler<RegisterCommand, Un
                 ));
 
         _eventsQueue.Add(new UserRegisteredIntegrationEvent(Guid.NewGuid(), request.Username));
+
+        await _uot.SaveAsync();
 
         return Unit.Value;
     }
