# Frontend/frontend-spa-app/src/assets/swagger/swagger.json
@@ -85,6 +85,18 @@
           }
         }
       }
+    },
+    "/api/usermanagement/Account/refresh-login": {
+      "post": {
+        "tags": [
+          "Account"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
     }
   },
   "components": {
